--- a/css/styles.css
+++ b/css/styles.css
@@ -30,3 +30,8 @@ footer {
     border-bottom: 1px ridge;
     min-height: 200px;
 }
+
+.site-footer{
+    background-image: linear-gradient(#CEC8FF, white);
+    padding: 20px 0;
+}
